--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.3",
+    "@mui/x-date-pickers": "^8.12.0",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
