--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,16 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
-    "@mui/material": "^7.3.3",
+    "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.12.0",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.23.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
