--- a/server/app.yaml
+++ b/server/app.yaml
@@ -2,10 +2,10 @@ runtime: nodejs24
 service: default
 
 handlers:
-- url: /
+- url: /(.*)
   static_files: dist/index.html
   upload: dist/index.html
+  secure: always
 
-- url: /(.*)
-  static_files: dist/\1
-  upload: dist/(.*)
+- url: /
+  static_dir: dist
