--- a/server/api.yaml.example
+++ b/server/api.yaml.example
@@ -1,5 +1,7 @@
 runtime: go125  # or another supported version
 service: api
+automatic_scaling:
+  max_instances: 1
 
 env_variables:
   GOOGLE_CLIENT_ID: xxxx
